--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
     <html>
         <head>
             <title>My First Repo</title>
+            <link rel="stylesheet" href="style.css">
         </head>
         <body>
             <h1>Hello, world!</h1>
+            <h2>Hello, World Again</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deserunt quis tempore fuga. Accusantium, ad et a aliquid voluptates maiores, magni, quo distinctio facere quod vitae? Laboriosam magni nam officiis?
             </p>
+
         </body>
     </html>
